修改固定侧边栏

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- github上的网址 zgx-curry.github.io/zgx.github.io -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/index.css">
+    <script src="js/index.js"></script>
 </head>
 
 <body>
@@ -908,7 +909,7 @@
                     <div class="triangle"></div>
                     <div class="shopcar">购物车（0）</div>
                 </a></li>
-            <li><a href="#" class="iconfont">&#xe612;
+            <li><a href="javascript:;" class="iconfont">&#xe612;
                     <div class="triangle"></div>
                     <div class="return">回顶部</div>
                 </a></li>
