搜索模块的js代码

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- github上的网址 zgx-curry.github.io/zgx.github.io -->
+<!-- github上的网址 zgx0512.github.io/zgx.github.io -->
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,8 @@
     <!-- title, description, keywords是搜索引擎搜索的关键, 写的好能提高网站的排名 -->
     <title>小米官网 - Xiaomi 13系列，Xiaomi Mix Fold 2，MIUI14，小米徕卡影像大赛</title>
     <!-- 网站说明 -->
-    <meta name="description" content="小米官网直营小米公司旗下所有产品，包括Xiaomi手机系列Xiaomi 13、MIX、Redmi 红米系列、Redmi Note 12、K60、电视、笔记本、米家智能家居等，同时提供小米官方服务及售后支持.">
+    <meta name="description"
+        content="小米官网直营小米公司旗下所有产品，包括Xiaomi手机系列Xiaomi 13、MIX、Redmi 红米系列、Redmi Note 12、K60、电视、笔记本、米家智能家居等，同时提供小米官方服务及售后支持.">
     <!-- 关键字 -->
     <meta name="keywords" content="Xiaomi,redmi,Xiaomi13,Redmi Note 12,Xiaomi MIX Alpha,小米商城">
     <link rel="shortcut icon" href="favicon.ico" />
@@ -101,7 +103,7 @@
                 </ul>
             </nav>
             <div class="search-box">
-                <input type="search" name="" id="" placeholder="充电宝">
+                <input type="search" name="" id="search" placeholder="充电宝">
                 <button class="iconfont">&#xe8d6;</button>
                 <div class="search-down">
                     <ul>
@@ -909,7 +911,7 @@
                     <div class="triangle"></div>
                     <div class="shopcar">购物车（0）</div>
                 </a></li>
-            <li><a href="javascript:;" class="iconfont">&#xe612;
+            <li class="backTop"><a href="javascript:;" class="iconfont">&#xe612;
                     <div class="triangle"></div>
                     <div class="return">回顶部</div>
                 </a></li>
